Added styles and styled FE

--- a/src/styles/core/main/spacing.scss
+++ b/src/styles/core/main/spacing.scss
@@ -16,7 +16,7 @@
 
                 @if $attribute !=b {
                   $sum: calc(#{$value} * #{$size-value});
-                  #{$attribute-value}-#{$direction-value}: $sum; 
+                  #{$attribute-value}: $sum; 
                 }
               }
 
