--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -13,5 +13,6 @@
 @import 'core/elements/labels';
 @import 'core/elements/button';
 @import 'core/elements/input';
+@import 'core/elements/lists';
 
 @import 'core/custom/general';
