--- a/src/styles/core/elements/button.scss
+++ b/src/styles/core/elements/button.scss
@@ -8,4 +8,11 @@
     @extend .bg-col-accent;
     @extend .uppercase;
     @extend .fs-2;
+    cursor: pointer;
+    transition: all .3s ease;
+
+    &:hover {
+        @extend .bg-col-accent-darker;
+        transition: all .3s ease;
+    }
 }
